Updated API routes & documentation
